# Limit-Setting

./: README
Input/: HZdZd4l_mZd60_GeV_combined_allsys_model.root
Input/test_24GeV/: HZdZd4l_mZd24_GeV_combined_allsys_model.root  READMEaboutInput  READMEresultAsymptoticRun
Input/test_24GeV/materials/: HZdZd4l_mZd24_GeV.xml  HZdZd4l_mZd24_GeV_ATLAS_2016_HZdZd_4mu_allsys_model.root  HZdZd4l_mZd24_GeV_allsys.root  channel_4mu_mZd24_GeV.xml  command_simple  runAsymptoticsCLs.C  runAsymptoticsCLs_C.d  runAsymptoticsCLs_C_ACLiC_dict_rdict.pcm
Input/test_24GeV/materials/root-files/dd/: 125.root
Scripts/: PyRootUtils.py  README  RooPyUtils.py  ld.py  limitPlot.C  limit_comb.py  limit_combined.py  limit_eps.py  limit_es.py  limit_gg.py  limit_lhc.py  limit_llll.py  limit_llqq.py  limit_llvv.py  limit_lvlv.py  limit_lvqq.py  limit_settings.py  npnote.py
src/: .cproject  .project  AsymptoticCalculator.cxx  CMakeLists.txt  FitCalculator.cxx  FitCalculator.h  FrequentistCalculator.cxx  HybridCalculator.cxx  HypoTestCalculatorGeneric.cxx  HypoTestInverter.cxx  HypoTestResult.cxx  LikelihoodCalculator.cxx  LikelihoodCalculator.h  LikelihoodScan.cxx  LimitCalculator.cxx  LimitCalculator.h  Makefile  PValueCalculator.cxx  PValueCalculator.h  ProfileLikelihoodCalculator.cxx  ProfileLikelihoodTestStatEnhanced.cxx  ProfileLikelihoodTestStatEnhanced.h  RooAbsPdf.cxx  RooSimultaneous.cxx  SimpleFit.cxx  StandardFrequentistDiscovery.C  StandardHypoTestInv.cxx  ToyMCSampler.cxx  WorkspaceCalculator.cxx  WorkspaceCalculator.h  cmake_install.cmake
src/Atlas/: AtlasLabels.C  AtlasLabels.h  AtlasStyle.C  AtlasStyle.h
src/Utilities/: GlobIter.h  WorkspaceCalculatorConfig.h
src/inc/: AsymptoticCalculator.h  CombinedCalculator.h  FrequentistCalculator.h  HybridCalculator.h  HybridResult.h  HypoTestCalculator.h  HypoTestCalculatorGeneric.h  HypoTestInverter.h  HypoTestInverterResult.h  HypoTestPlot.h  HypoTestResult.h  LikelihoodInterval.h  MaxLikelihoodEstimateTestStat.h  NumEventsTestStat.h  ProfileLikelihoodCalculator.h  ProfileLikelihoodTestStat.h  ProfileLikelihoodTestStatEnhanced.h  RatioOfProfiledLikelihoodsTestStat.h  RooAbsPdf.h  RooSimultaneous.h  RooStatsUtils.h  SamplingDistPlot.h  SimpleInterval.h  SimpleLikelihoodRatioTestStat.h  TestStatSampler.h  ToyMCImportanceSampler.h  ToyMCSampler.h  ToyMCStudy.h  WorkspaceCalculator.h
